# libasync

./: .gitignore  .travis.yml  README.md  appveyor.yml  更新自己的C++编程范式.md
benchmarks/: CMakeLists.txt  compile.sh  main.cpp  parallel_sum_benchmark.h  test_tbb.h
libasync/: CMakeLists.txt  CMakeSettings.json  bench.sh  cftest_debug_ninja.sh  cftest_release_ninja.sh  clean.sh  compile.sh  debug_ninja.sh  highperformance_test.sh  release.sh  release_bench_ninja.sh  test.sh  test_cftest_release_ninja.sh  test_debug_make.sh  test_release_ninja.sh
libasync/benchmarks/: CMakeLists.txt  compile.sh  parallel_sum_benchmark.cc  parallel_sum_stdcpp.h  test_tbb.cc
libasync/benchmarks/local_build/: .ninja_log  CMakeCache.txt  benchmarks  build.ninja  rules.ninja
libasync/benchmarks/perf/: CMakeLists.txt  performance.cc
libasync/benchmarks/testbed/: CMakeLists.txt  testbed.cc
libasync/docs/: c++17.md  compiling-from-source.md  referencewrapper.md  stl-algorithms.md  todo.md
libasync/docs/notes/: c++17.md  cache-friendly.md  chase-lev-deque.md  metaprogramming.md
libasync/samples/: CMakeLists.txt  Makefile  cfdeque.cc  cfdeque.h  cfsched.cc  cfsched.h  sample  sample.cc  sample.h  tasklist.cc  tasklist.h  worksteal.cc  worksteal.h
libasync/src/: Async.cc  Async.h  AutoRelease.h  CMakeLists.txt  ChaseLevDeque.h  Common.h  ConcurrentPrint.cc  ConcurrentPrint.h  CountDown.h  FixedPool.h  Future.h  Internal.h  LibAsync.h  Makefile  Options.h  Pact.h  ParallelSum.h  Profiler.h  Runnable.h  SpawnSyncPool.cc  SpawnSyncPool.h  SpawnSyncRunnable.cc  SpawnSyncTask.cc  SpawnSyncTask.h  SpawnSyncWorker.cc  SpawnSyncWorker.h  SubmissionBuffer.h  SubmissionDeque.h  Task.h  ThreadPool.h  Util.cc  Utils.cc  Utils.h  chaselev_deque.h  coroutine_engine.h  future.h  pact.h  promise.h  threadpool.cc  threadpool.h  (+7 more)
libasync/src/bk/: FixedPool.h  SpawnSyncPool.h  SpawnSyncRunnable.h  SpawnSyncTask.h  SpawnSyncWorker.cc
libasync/src/cache_friendly/: CFBuffer.cc  CFBuffer.h  CFBufferTaskBlock.h  CFConfig.h  CFDeque.cc  CFDeque.h  CFLockFreeTaskList.h  CFParallelSum.h  CFPool.cc  CFPool.h  CFScheduler.cc  CFScheduler.h  CFTask.cc  CFTask.h  CFTaskBlock.h  CFTaskHeader.h  CFTaskList.cc  CFTaskList.h  CFTooManyTasks.h  CFWorker.cc  CFWorker.h  CMakeLists.txt
libasync/src/interface/: Cancellable.h  Task.h  ThreadPool.h  Waitable.h  interfaces.h
libasync/src/programmer_friendly/: Async.cc  Async.h  CMakeLists.txt  Callable.h  ChaseLevDeque.h  Config.h  PFParallelSum.h  SubmissionBuffer.h  Task.h  WorkStealingScheduler.h  WorkStealingWorker.cc  WorkStealingWorkerPool.cc  WorkStealingWorkerPool.h
libasync/src/spawnsync/: CMakeLists.txt  Callable.h  ChaseLevDeque.h  FixedThreadPool.cc  FixedThreadPool.h  SimpleSpawnDeque.h  SpawnSyncTask.h  SubmissionBuffer.h  Task.h  WorkStealing.cc  (+9 more)
libasync/tests/: ArrayTOT.cc  AsyncTOT.cc  CFDequeTOT.cc  CFTaskBlockTOT.cc  CFTaskListTOT.cc  CMakeLists.txt  CallableTOT.cc  CancelTaskTOT.cc  ChaseLevDequeTOT.cc  FixedThreadPoolTOT.cc  FuturisticTaskTOT.cc  HofTOT.cc  ParallelSumTOT.cc  PipableTOT.cc  SimpleSpawnDequeTOT.cc  SpawnSyncTaskTOT.cc  SubmissionBufferTOT.cc  SystemIntegrationTOT.cc  UtilitiesTOT.cc  WorkStealingSchedTOT.cc  WorkStealingSchedulerTOT.cc  test_chaselev_deque.cc  test_todo.cc
libasync/tests_cf/: CFBufferTOT.cc  CFDequeTOT.cc  CFIntegratedTOT.cc  CFTaskBlockTOT.cc  CFTaskListTOT.cc  CMakeLists.txt  Readme.md
(+18 files in other folders)
