aux_source_directory(. DIRSRCS)
link_directories(./programmer_friendly)
link_directories(./cache_friendly)
link_directories(./utils)
add_subdirectory(./programmer_friendly)
add_subdirectory(./cache_friendly)
add_subdirectory(./utils)
add_library(async ${DIRSRCS})  
if(UNIX)
	target_link_libraries(async pthread)
endif()
target_link_libraries(async pf cf utils)
set_property(TARGET async PROPERTY CXX_STANDARD 17)
set_property(TARGET async PROPERTY CXX_STANDARD_REQUIRED ON)